Fixed horizontal scroll. Added transition for colors change

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,8 @@
 *::before,
 *::after {
   box-sizing: inherit;
+
+  transition: color 0.5s ease, background-color 0.5s ease, border-color 0.5s ease;
 }
 
 html,
@@ -73,10 +75,25 @@ input[type="checkbox"] {
 .header {
   display: flex;
   justify-content: flex-end;
+
+  min-height: 50px;
+}
+
+.header__theme-container {
+  display: flex;
+
+  border-left: 4px solid var(--dark-color);
+  border-right: 4px solid var(--dark-color);
+  border-bottom: 4px solid var(--dark-color);
+}
+
+html.is-dark .header__theme-container {
+  border-color: var(--shadow-color);
 }
 
 .header__theme-label {
-  min-width: 100px;
+  width: 100px;
+  max-width: 200px;
 
   background-color: var(--white-color);
 
@@ -93,7 +110,7 @@ input[type="checkbox"] {
   justify-content: center;
 
   width: 100%;
-  height: 100%;
+  height: calc(100% - 50px); /* 50px - header height */
 }
 
 .visibility-hidden {
